# baxi2mqtt

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  config_validator.py  container_healthcheck.py  docker-compose.yml  health_checker.py  homeassistant_discovery.py  pyproject.toml  pytest.ini  reconnection_manager.py  requirements.txt
config/: config.example.yaml
tests/: conftest.py  test_app.py  test_config_validator.py  test_env_overrides.py  test_health_checker.py  test_reconnection_manager.py
